# streaming-data-engineering-pipeline

./: .gitignore  LICENSE  README.md  consumer.py  docker-compose.yml  init.sql  producer.py  pyproject.toml  requirements.txt
dbt_sales/: dbt_project.yml  profiles.yml
dbt_sales/models/marts/: daily_sales.sql
dbt_sales/models/staging/: stg_sales.sql
