[project]
name = "data-engineering-sales-pipeline"
version = "0.1.0"
description = "Local streaming sales pipeline using Kafka, PostgreSQL, and dbt."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-core==1.8.7",
    "dbt-postgres==1.8.2",
    "kafka-python==2.0.2",
    "psycopg2-binary==2.9.9",
]

[tool.uv]
package = false
